# steam-coopfinder

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
coopfinder/: steam_scratchpad.py
steam_coopfinder/: __main__.py
